--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,14 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --background-image: url(../images/cover-image-dark.png);
+  --text-title-color:#000028;
+  --accent-color: #ff0070;
+  --text-section-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --button-color: #FF0070;
+  --decor-display: block;
+  --button-hover: rgb(255 0 112 / 0.5);
+  --title-section-color: #ff0070;
+  --decor-color: #FF0070;
 }
