--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  min-inline-size: 375px;
+  min-inline-size: 355px;
   max-inline-size: 1440px;
   margin: 0 auto;
 }
@@ -19,6 +19,9 @@ h4,
 h5,
 h6,
 p {
+  font-family: "IBM Plex mono", sans-serif;
+  font-weight:400;
+  font-size:18px;
   margin: 0;
 }
 
@@ -35,8 +38,10 @@ picture {
 
 button,
 a {
+  font-family: "IBM Plex mono", sans-serif;
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  font-size:18px;
 }
