--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,29 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+   --background-image: url(../images/cover-image-light.png);
+  --text-title-color:#353430;
+  --accent-color: #FF8DCB;
+  --text-section-color: #353430;
+  --title-color: #FFC2E6;
+  --button-color:#353430;
+  --decor-display: none;
+  --button-hover:  rgb(53 52 48 / 0.5);
+  --title-section-color: #353430;
+  --decor-color: #353430;
+}
+
+@media (prefers-color-scheme: light) {
+:root{
+   --background-image: url(../images/cover-image-light.png);
+  --text-title-color:#353430;
+  --accent-color: #FF8DCB;
+  --text-section-color: #353430;
+  --title-color: #FFC2E6;
+  --button-color:#353430;
+  --decor-display: none;
+  --button-hover: rgb(53 52 48 / 0.5);
+  --title-section-color: #353430;
+  --decor-color: #353430;
+}
 }
