--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,379 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-image: var(--background-image);
+  margin:0 auto;
+  background-attachment: fixed;
+  background-position: center;
+  background-size:cover;
+  background-color: rgb(8, 8, 62);
+ padding:0 10px;
+}
+
+.header{
+   block-size: 100vh;
+   min-block-size: 658px;
+   display:grid;
+   position:relative;
+   grid-template-rows:1fr 1fr 1fr;
+}
+
+.header__theme-menu-list{
+  display: flex;
+  flex-direction:column;
+  gap:11.5px;
+  }
+
+
+
+.decor-text{
+  font-family: "IBM Plex mono", sans-serif;
+  position:absolute;
+  display:var(--decor-display);
+  top:5px;
+  right: 29px;
+  color: var(--accent-color);
+  line-height: 25px;
+}
+
+.decor-text::after{
+  content: "";
+  position:absolute;
+  display: var(--decor-display);
+  inline-size: 9px;
+  block-size: 9px;
+  top: 7px;
+  left:41px;
+  border-radius: 50%;
+  background-color: var(--accent-color, #ff0070);
+  box-shadow: 0 0 4px 2px var(--accent-color)
+}
+
+
+.header__main-title{
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--accent-color);
+  font-weight:700;
+  line-height:0.83;
+  align-self:center;
+  justify-content:start;
+  letter-spacing: 0;
+}
+
+.title-decor{
+  background-color: var(--accent-color);
+  color: var(--text-title-color);
+}
+
+.header__text{
+  font-weight:700;
+  line-height: 23.4px;
+  align-self:center;
+  font-size:18px;
+  margin-bottom: 39px;
+}
+
+.header__theme-menu{
+  align-self: center;
+  justify-self: end;
+  margin-top:12px;
+}
+
+.header__theme-menu-button{
+  font-family: "IBM Plex mono", sans-serif;
+  background-color:transparent;
+  outline:none;
+  border:none;
+  color: var(--button-color);
+  line-height: 18px;
+  inline-size:70px;
+  block-size:26px;
+}
+
+.header__theme-menu-item{
+  display:flex;
+  justify-content: center;
+}
+
+
+.main{
+  margin-top:40px;
+  margin-bottom:40px;
+  display:flex;
+  flex-direction:column;
+  gap: 50px;
+}
+
+.section{
+  display:grid;
+  gap:20px;
+}
+
+.section__title{
+  margin-bottom:10px;
+  font-weight:700;
+}
+
+.section__text{
+  color: var(--text-section-color);
+}
+
+.section__main-title{
+  color: var(--title-section-color);
+  font-weight:700;
+}
+
+.section__title-advice{
+  font-weight:700;
+}
+
+.section__description{
+  display: grid;
+  gap:20px;
+}
+
+
+
+.gallery-title{
+  margin-bottom: 10px;
+  font-weight:700;
+}
+
+.gallery-container{
+  display:grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 142px 355px 237px 355px 237px;
+  gap:10px;
+}
+
+.gallery-img{
+  inline-size:100%;
+  block-size:100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.footer{
+  position:relative;
+  block-size: 100vh;
+  min-block-size: 668px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer__title{
+ font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+ color: var(--title-color);
+ text-shadow: 2px 2px 0 #FF0070;
+ font-weight:700;
+ line-height:0.83;
+}
+
+.section__subtitle{
+margin-bottom: 10px;
+}
+
+.decorated-zone::after{
+  inline-size:25px;
+  block-size:25px;
+  position:absolute;
+  content: "";
+  top:5px;
+  right:0;
+  border-width: 1px 1px 0px 0px;
+  border-style: solid;
+  border-color: var(--decor-color);
+}
+
+.decorated-zone::before{
+  content: "";
+  inline-size:25px;
+  block-size:25px;
+  position:absolute;
+  bottom:15px;
+  left:0px;
+  border-width: 0 0 1px 1px;
+  border-style: solid;
+  border-color: var(--decor-color);
+}
+
+@media(width>766px){
+  .page{
+    padding:0 20px;
+  }
+
+  .main{
+    margin-top:60px;
+    margin-bottom: 60px;
+    gap:80px;
+  }
+
+  .header{
+    margin-top: 5px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+
+.decorated-zone:after{
+  top: 20px;
+}
+
+.decor-text{
+  margin-top:20px;
+}
+
+
+  .header__main-title{
+    grid-column: 1/3;
+    grid-row:2/3;
+    align-self:center;
+    justify-content:start;
+    margin-left:-15px;
+    font-size:clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__text{
+    align-self: start;
+    grid-row:3/4;
+    grid-column: 2/3;
+    margin-top: 44px;
+  }
+
+  .header__theme-menu{
+    align-self:end;
+    justify-self: end;
+    grid-column: 2/3;
+    margin-bottom:51px;
+  }
+
+  .focus__section{
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .section__concentration{
+    grid-template-columns:  234px 1fr;
+  }
+
+  .section__main-title{
+    grid-column: 1/2;
+  }
+
+  .section__description-concentration{
+    grid-column:1/3;
+  }
+
+  .section__advise{
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .advice-main-title{
+    grid-column: 1/2;
+  }
+
+  .section__description-advice{
+    grid-column:2/3;
+  }
+
+  .gallery-container{
+    margin-top:20px;
+    gap:20px;
+   grid-template-columns: repeat(3, auto);
+   grid-template-rows: repeat(3, auto);
+  }
+
+  .gallery-img-sunset{
+    grid-row: 1/2;
+    grid-column: 1/3;
+    inline-size: minmax(479px, 650px);
+    block-size: minmax(192px, 260px);
+  }
+
+  .gallery-img-ice-cream{
+  grid-row:1/3;
+ grid-column: 3/4;
+ inline-size: minmax(229px, 314px);
+block-size: minmax(442px, 595px)
+  }
+
+  .gallery-img-tape{
+    grid-column: 1/2;
+    grid-row:2/4;
+    inline-size: minmax(229px, 315px);
+    block-size: minmax(568px, 768px);
+  }
+
+  .gallery-img-street{
+    grid-column: 2/4;
+    grid-row: 3/4;
+    inline-size: minmax(479px, 649px);
+    block-size: minmax(728px, 1091px);
+  }
+
+  .gallery-img-book{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    inline-size:minmax(230px, 315px);
+    block-size: minmax(230px, 315px);
+  }
+}
+
+@media (width>1023px){
+  .section__concentration{
+    grid-template-columns: 325px 1fr;
+    grid-template-rows: auto auto;
+  }
+
+.header__main-title{
+  grid-column: 1/3;
+
+}
+
+  .section__description-concentration{
+    grid-template-columns:  1fr 1fr 1fr;
+  }
+
+  .header__theme-menu-list{
+    flex-direction: row;
+  }
+
+  .header__theme-menu{
+    grid-column: 1/3;
+    justify-self: center;
+    align-self: start;
+    margin:16px 0 0px 0;
+  }
+}
+
+.link{
+  text-shadow: 2px 2px 0 var(--accent-color);
+  border: none;
+  outline:none;
+  text-decoration: none;
+}
+
+.link:hover{
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  border-color: var(--text-section-color);
+}
+
+.link:focus-visible{
+  outline: 1px solid var(--text-section-color);
+}
+
+.header__theme-menu-button:hover{
+outline: 1px solid var(--button-hover);
+}
+
+.header__theme-menu-button:focus-visible{
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  border-color: var(--button-hover);
+}
+
+.header__theme-menu-button_active{
+  pointer-events: none;
+  border:1px solid var(--button-color);
 }
