--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,15 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root{
+  --background-image: url(../images/cover-image-dark.png);
+  --text-title-color:#000028;
+  --accent-color: #ff0070;
+  --text-section-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --button-color: #ff0070;
+  --decor-display: block;
+  --button-hover: rgb(255 0 112 / 0.5);
+  --title-section-color: #ff0070;
+  --decor-color: #FF0070;
+}
