--- a/styles/style.css
+++ b/styles/style.css
@@ -19,11 +19,11 @@
   grid-template-rows:1fr 1fr 1fr;
 }
 
-.header__theme-menu-list  {
+.header__theme-menu-list {
   display: flex;
   flex-direction:column;
   gap:11.5px;
-  }
+}
 
 
 
@@ -37,7 +37,7 @@
   line-height: 25px;
 }
 
-.decor-text::after  {
+.decor-text::after {
   content: "";
   position:absolute;
   display: var(--decor-display);
@@ -62,7 +62,7 @@
   letter-spacing: 0;
 }
 
-.title-decor  {
+.title-decor {
   background-color: var(--accent-color);
   color: var(--text-title-color);
 }
@@ -81,7 +81,7 @@
   margin-top:12px;
 }
 
-.header__theme-menu-button  {
+.header__theme-menu-button {
   font-family: "IBM Plex mono", sans-serif;
   background-color:transparent;
   outline:none;
@@ -92,7 +92,7 @@
   block-size:26px;
 }
 
-.header__theme-menu-item  {
+.header__theme-menu-item {
   display:flex;
   justify-content: center;
 }
@@ -106,7 +106,7 @@
   gap: 50px;
 }
 
-.section  {
+.section {
   display:grid;
   gap:20px;
 }
@@ -116,7 +116,7 @@
   font-weight:700;
 }
 
-.section__text  {
+.section__text {
   color: var(--text-section-color);
 }
 
@@ -172,7 +172,7 @@
  line-height:0.83;
 }
 
-.section__subtitle  {
+.section__subtitle {
   margin-bottom: 10px;
 }
 
@@ -257,7 +257,7 @@
     grid-template-columns:  234px 1fr;
   }
 
-  .section__main-title  {
+  .section__main-title {
     grid-column: 1/2;
   }
 
@@ -265,11 +265,11 @@
     grid-column:1/3;
   }
 
-  .section__advise  {
+  .section__advise {
     grid-template-columns: 1fr 2fr;
   }
 
-  .advice-main-title  {
+  .advice-main-title {
     grid-column: 1/2;
   }
 
@@ -330,6 +330,10 @@
     grid-column: 1/3;
   }
 
+  .focus__section{
+    grid-template-columns: 314px 1fr;
+  }
+
   .section__description-concentration {
     grid-template-columns:  1fr 1fr 1fr;
   }
@@ -345,6 +349,7 @@
     margin:16px 0 0px 0;
   }
 }
+
 
 .link {
   text-shadow: 2px 2px 0 var(--accent-color);
