--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,9 +7,9 @@
 }
 
 body {
+  margin: 0;
   min-inline-size: 355px;
   max-inline-size: 1440px;
-  margin: 0 auto;
 }
 
 h1,
@@ -40,7 +40,6 @@ button,
 a {
   font-family: "IBM Plex mono", sans-serif;
   color: currentColor;
-  font-size: inherit;
   line-height: inherit;
   font-size:18px;
 }
