--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
   background-attachment: fixed;
   background-position: center;
   background-size:cover;
-  background-color: rgb(8, 8, 62);
+  background-color: var(--page-background-color);
   padding:0 10px;
 }
 
@@ -231,7 +231,7 @@
     grid-row:2/3;
     align-self:center;
     justify-content:start;
-    margin-left:-15px;
+    margin-left:-21px;
     font-size:clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
@@ -239,7 +239,7 @@
     align-self: start;
     grid-row:3/4;
     grid-column: 2/3;
-    margin-top: 44px;
+    margin-top: 41px;
   }
 
   .header__theme-menu {
@@ -347,6 +347,10 @@
     justify-self: center;
     align-self: start;
     margin:16px 0 0px 0;
+  }
+
+  .header__text{
+    margin-top:48px;
   }
 }
 
