--- a/styles/variables.css
+++ b/styles/variables.css
@@ -13,4 +13,5 @@
   --button-hover: rgb(255 0 112 / 0.5);
   --title-section-color: #ff0070;
   --decor-color: #FF0070;
+  --page-background-color: rgb(8, 8, 62);;
 }
