--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@
 
 
 .header__main-title {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-size: var(--logo-size);
   color: var(--title-color);
   text-shadow: 4px 4px 0 var(--accent-color);
   font-weight:700;
@@ -165,7 +165,7 @@
 }
 
 .footer__title {
- font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+ font-size: var(--logo-size);
  color: var(--title-color);
  text-shadow: 2px 2px 0 #FF0070;
  font-weight:700;
@@ -232,7 +232,7 @@
     align-self:center;
     justify-content:start;
     margin-left:-21px;
-    font-size:clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    font-size:var(--logo-size);
   }
 
   .header__text {
