--- a/styles/variables.css
+++ b/styles/variables.css
@@ -13,5 +13,12 @@
   --button-hover: rgb(255 0 112 / 0.5);
   --title-section-color: #ff0070;
   --decor-color: #FF0070;
-  --page-background-color: rgb(8, 8, 62);;
+  --page-background-color: rgb(8, 8, 62);
+  --logo-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+}
+
+@media (width >= 766px) {
+  :root {
+    --logo-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
 }
